# QmlQCustomPlot

./: CMakeLists.txt  README.md  README_zh-CN.md  main.cc  main.qml  package.json  qml.qrc  qtquickcontrols2.conf
src/: CMakeLists.txt  TimePlot.cpp  TimePlot.h  axis.cpp  axis.h  baseplot.cpp  baseplot.h  grid.h  ticker.h
